app/styles/_details.scss
$detailsHeaderColor: $light-gray;

.property-details {
  position: absolute;
  left: $filterWidth + $marketWidth;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
  background: $light-gray;
  overflow-y: scroll;
  overflow-x: hidden;

  .page-header {
    h4 {
      font-weight: normal;
    }
  }

  .comment-alert {
    span {
      float: right;
      font-size: 13px;
    }
    p {
      overflow-wrap: break-word;
    }
  }


  @include rescourTabs;
}

.picture-container {
  width: 600px;
}

.contact-selected strong {
  //background: lighten($light-green, 20%) !important;
  color: $blue;
}

.well.contact {
  cursor: pointer;
}



.contact-form {
  .controls {
    margin: 0 0 30px;
  }
  .checkbox {
    cursor: pointer;
  }
}

.financials-container {
    .financials-delete {
        float: left;
        display: inline-block;
    }
    .financials-title {
        float: left;
        display: inline-block;
    }
    .financials-value {
        float: left;
        display: inline-block;
    }
    .financials-class {
        width: 60px;
        /* float: left; */
        display: inline-block;
    }
}

